# MGSPICO3z

./: README.md
RasPiPico/harzlib/: CMakeLists.txt  build.cmd  harzbios.z80  harzlib.h  harzplay.z80  msxbios.inc
RasPiPico/mgspico3z/: CMakeLists.txt  MgspicoSettings.cpp  MgspicoSettings.h  MusFiles.cpp  MusFiles.h  global.cpp  global.h  mgspico.h  mgspico3z.cpp
RasPiPico/mgspico3z/harz80/: CHarz80Ctrl.cpp  CHarz80Ctrl.h
appendix/mudrv_musics/: README_MUDRV.md  START_Extract_all_BGM_files.cmd  embed_str.py  extract_0c00.py  extract_62676d.py  extract_CAMP_DAISENRYAKU2_MSX2.cmd  extract_FRAY_MSX2.cmd  extract_FRAY_MSXtR.cmd  extract_ILLUSION_MSXtR.cmd  extract_SOUKOBAN_MSX2.cmd  extract_THE_TOWER_OF_CABIN_MSX2.cmd  extract_Xak2_MSX2.cmd  extract_Xak_MSX2.cmd  extract_binary.py  extract_cabin_bgm.py
